--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_metatag
     - field.field.user.user.field_vih_top_banner
     - field.field.user.user.field_vih_top_banner_text
     - field.field.user.user.field_vih_user_birthday
@@ -18,6 +19,7 @@ dependencies:
     - field.field.user.user.field_vih_user_type_id
   module:
     - entity_reference_revisions
+    - metatag
     - panelizer
     - text
     - user
@@ -32,6 +34,13 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_metatag:
+    weight: 11
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
+    region: content
   field_vih_top_banner:
     weight: 8
     label: hidden
