--- a/config/sync/core.entity_view_display.paragraph.app_answer.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.app_answer.default.yml
@@ -12,12 +12,11 @@ bundle: app_answer
 mode: default
 content:
   field_answer:
-    weight: 1
+    weight: 3
     label: above
-    settings:
-      link_to_entity: false
+    settings: {  }
     third_party_settings: {  }
-    type: string
+    type: basic_string
     region: content
   field_question:
     weight: 2
