--- a/config/sync/field.field.paragraph.app_answer.field_answer.yml
+++ b/config/sync/field.field.paragraph.app_answer.field_answer.yml
@@ -1,4 +1,4 @@
-uuid: f9ea3f50-3f7e-4705-b3c5-a7449bf6eadb
+uuid: ad9907fa-eaca-40f0-8980-dd7932049bd7
 langcode: da
 status: true
 dependencies:
@@ -16,4 +16,4 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: string_long
