--- a/config/sync/field.storage.paragraph.field_answer.yml
+++ b/config/sync/field.storage.paragraph.field_answer.yml
@@ -1,4 +1,4 @@
-uuid: 48a257bd-41c6-4c28-9a28-75d4ceaf51ca
+uuid: 33d98043-778a-4a56-b67e-c0e8f88af1f7
 langcode: da
 status: true
 dependencies:
@@ -7,10 +7,8 @@ dependencies:
 id: paragraph.field_answer
 field_name: field_answer
 entity_type: paragraph
-type: string
+type: string_long
 settings:
-  max_length: 255
-  is_ascii: false
   case_sensitive: false
 module: core
 locked: false
