--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "drupal/viewsreference": "^1.0@alpha",
         "drupal/mailchimp": "^1.6",
         "drupal/search_api": "^1.3",
-        "lsolesen/edbbrugs-php-sdk": "^0.2.0",
+        "lsolesen/edbbrugs-php-sdk": "0.3.0",
         "quickpay/quickpay-php-client": "^1.0",
         "drupal/webform": "^5.0@beta",
         "drupal/examples": "1.x-dev",
