VI-380 Views must have 'vih_' prefix.

--- a/config/sync/views.view.vih_long_courses.yml
+++ b/config/sync/views.view.vih_long_courses.yml
@@ -14,7 +14,7 @@ dependencies:
     - paragraphs
     - text
     - user
-id: long_courses
+id: vih_long_courses
 label: 'Lange kurser'
 module: views
 description: ''
