VI-380 Views must have 'vih_' prefix.

--- a/config/sync/block.block.views_vih_block__banner_slideshow_block_1.yml
+++ b/config/sync/block.block.views_vih_block__banner_slideshow_block_1.yml
@@ -3,19 +3,19 @@ langcode: da
 status: true
 dependencies:
   config:
-    - views.view.banner_slideshow
+    - views.view.vih_banner_slideshow
   module:
     - views
   theme:
     - site
-id: views_block__banner_slideshow_block_1
+id: views_block__vih_banner_slideshow_block_1
 theme: site
 region: banner
 weight: 0
 provider: null
-plugin: 'views_block:banner_slideshow-block_1'
+plugin: 'views_block:vih_banner_slideshow-block_1'
 settings:
-  id: 'views_block:banner_slideshow-block_1'
+  id: 'views_block:vih_banner_slideshow-block_1'
   label: ''
   provider: views
   label_display: '0'
