--- a/config/sync/views.view.vih_banner_slideshow.yml
+++ b/config/sync/views.view.vih_banner_slideshow.yml
@@ -9,7 +9,7 @@ dependencies:
     - block_content
     - entity_reference_revisions
     - owlcarousel
-id: banner_slideshow
+id: vih_banner_slideshow
 label: 'Banner slideshow'
 module: views
 description: ''
