VI-380 Views must have 'vih_' prefix.

--- a/config/sync/views.view.vih_class_packages.yml
+++ b/config/sync/views.view.vih_class_packages.yml
@@ -8,7 +8,7 @@ dependencies:
   module:
     - taxonomy
     - user
-id: class_packages
+id: vih_class_packages
 label: Fagpakker
 module: views
 description: ''
