VI-380 Views must have 'vih_' prefix.

--- a/config/sync/views.view.vih_short_courses.yml
+++ b/config/sync/views.view.vih_short_courses.yml
@@ -13,7 +13,7 @@ dependencies:
     - node
     - text
     - user
-id: short_courses
+id: vih_short_courses
 label: 'Korte kurser'
 module: views
 description: ''
