--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,7 @@
         "drupal/menu_multilingual": "^1.0@alpha",
         "drupal/easy_breadcrumb": "^1.8",
         "drupal/block_scheduler": "^1.0",
-        "drupal/eu_cookie_compliance": "^1.0"
+        "drupal/eu_cookie_compliance": "1.x-dev"
     },
     "repositories": [
         {
