--- a/config/sync/eu_cookie_compliance.settings.yml
+++ b/config/sync/eu_cookie_compliance.settings.yml
@@ -2,14 +2,14 @@ cookie_lifetime: 100
 domain: ''
 domains_option: 1
 domains_list: ''
-eu_only: false
-eu_only_js: false
-exclude_paths: "/admin\n/admin/*\n/batch\n/node/add*\n/node/*/*\n/user/*/*"
+eu_only: null
+eu_only_js: null
+exclude_paths: "/admin\r\n/admin/*\r\n/batch\r\n/node/add*\r\n/node/*/*\r\n/user/*/*"
 exclude_admin_theme: false
 langcode: da
 popup_agreed:
-  value: '<h2>Thank you for accepting cookies</h2><p>You can now hide this message or find out more about cookies.</p>'
-  format: restricted_html
+  value: "<h2>Thank you for accepting cookies</h2>\r\n\r\n<p>You can now hide this message or find out more about cookies.</p>\r\n"
+  format: rich_text
 popup_agree_button_message: 'OK, I agree'
 popup_agreed_enabled: false
 popup_bg_hex: 0779bf
@@ -20,15 +20,15 @@ show_disagree_button: true
 popup_disagree_button_message: 'Give me more info'
 popup_enabled: true
 popup_find_more_button_message: 'More info'
-popup_height: 0
+popup_height: null
 popup_hide_agreed: false
 popup_hide_button_message: Hide
 popup_info:
-  value: '<h2>We use cookies on this site to enhance your user experience</h2><p>By clicking any link on this page you are giving your consent for us to set cookies.</p>'
-  format: restricted_html
+  value: "<h2>We use cookies on this site to enhance your user experience</h2>\r\n\r\n<p>By clicking any link on this page you are giving your consent for us to set cookies.</p>\r\n"
+  format: rich_text
 mobile_popup_info:
-  value: '<h2>We use cookies on this site to enhance your user experience</h2><p>By tapping any link on this page you are giving your consent for us to set cookies.</p>'
-  format: restricted_html
+  value: ''
+  format: rich_text
 mobile_breakpoint: 768
 popup_link: '<front>'
 popup_link_new_window: true
@@ -45,3 +45,15 @@ better_support_for_screen_readers: false
 use_mobile_message: false
 _core:
   default_config_hash: OlBvbDcm2PUT2i28p3oNpuKaUKbbK4qjfrAyYxvd0B8
+cookie_session: 0
+method: default
+disagree_button_label: Disagree
+whitelisted_cookies: ''
+disabled_javascripts: ''
+consent_storage_method: null
+withdraw_message:
+  value: ''
+  format: rich_text
+withdraw_action_button_label: ''
+withdraw_tab_button_label: ''
+withdraw_enabled: false
