--- a/config/sync/views.view.vih_employees.yml
+++ b/config/sync/views.view.vih_employees.yml
@@ -6,7 +6,7 @@ dependencies:
     - core.entity_view_mode.user.teaser
   module:
     - user
-id: employees
+id: vih_employees
 label: Medarbejdere
 module: views
 description: ''
