VI-380 Views must have 'vih_' prefix.

--- a/config/sync/views.view.vih_my_classes_nodes.yml
+++ b/config/sync/views.view.vih_my_classes_nodes.yml
@@ -12,7 +12,7 @@ dependencies:
     - paragraphs
     - text
     - user
-id: my_classes_nodes
+id: vih_my_classes_nodes
 label: 'Mine fag - noder'
 module: views
 description: ''
