--- a/config/sync/eu_cookie_compliance.settings.yml
+++ b/config/sync/eu_cookie_compliance.settings.yml
@@ -30,7 +30,7 @@ mobile_popup_info:
   value: ''
   format: rich_text
 mobile_breakpoint: 768
-popup_link: '<front>'
+popup_link: /privatlivspolitik
 popup_link_new_window: true
 popup_position: false
 fixed_top_position: true
@@ -39,7 +39,7 @@ popup_width: 100%
 use_bare_css: false
 disagree_do_not_show_popup: false
 reload_page: false
-cookie_name: ''
+cookie_name: vih.bellcom.dk
 exclude_uid_1: false
 better_support_for_screen_readers: false
 use_mobile_message: false
@@ -50,7 +50,7 @@ method: default
 disagree_button_label: Disagree
 whitelisted_cookies: ''
 disabled_javascripts: ''
-consent_storage_method: null
+consent_storage_method: basic
 withdraw_message:
   value: ''
   format: rich_text
