--- a/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class.field_vih_paragraphs.yml
@@ -19,6 +19,7 @@ dependencies:
     - paragraphs.paragraphs_type.user_quote
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
+    - paragraphs.paragraphs_type.vih_list_of_news_list_advanced
     - paragraphs.paragraphs_type.vih_teacher_class_description
     - paragraphs.paragraphs_type.vih_webform
     - taxonomy.vocabulary.vih_class
@@ -41,12 +42,13 @@ settings:
     target_bundles:
       1_column_action_centered: 1_column_action_centered
       class_packages: class_packages
-      event_list: event_list
       article: article
+      event_list: event_list
       file: file
       list_of_news_teasers: list_of_news_teasers
       social_media_embed: social_media_embed
       long_course_list_: long_course_list_
+      vih_list_of_news_list_advanced: vih_list_of_news_list_advanced
       employee: employee
       gallery: gallery
       short_course_list_: short_course_list_
@@ -63,10 +65,10 @@ settings:
       class_packages:
         enabled: true
         weight: 25
-      event_list:
+      article:
         enabled: true
         weight: 26
-      article:
+      event_list:
         enabled: true
         weight: 26
       file:
@@ -81,6 +83,9 @@ settings:
       long_course_list_:
         enabled: true
         weight: 29
+      vih_list_of_news_list_advanced:
+        enabled: true
+        weight: 30
       employee:
         enabled: true
         weight: 30
@@ -131,6 +136,9 @@ settings:
         enabled: false
       vih_single_class_group:
         weight: 44
+        enabled: false
+      vih_banner_slide:
+        weight: 45
         enabled: false
       vih_teacher_class_description:
         enabled: true
