--- a/config/sync/field.field.node.event.field_vih_paragraphs.yml
+++ b/config/sync/field.field.node.event.field_vih_paragraphs.yml
@@ -20,6 +20,7 @@ dependencies:
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
     - paragraphs.paragraphs_type.vih_content_grid
+    - paragraphs.paragraphs_type.vih_list_of_news_list_advanced
     - paragraphs.paragraphs_type.vih_webform
   module:
     - entity_reference_revisions
@@ -43,6 +44,7 @@ settings:
       article: article
       class_packages: class_packages
       employee: employee
+      vih_list_of_news_list_advanced: vih_list_of_news_list_advanced
       event_list: event_list
       file: file
       gallery: gallery
@@ -70,6 +72,9 @@ settings:
       employee:
         enabled: true
         weight: 29
+      vih_list_of_news_list_advanced:
+        enabled: true
+        weight: 30
       event_list:
         enabled: true
         weight: 30
@@ -117,6 +122,9 @@ settings:
         enabled: false
       vih_ordered_course_person:
         weight: 44
+        enabled: false
+      vih_banner_slide:
+        weight: 45
         enabled: false
       vih_ordered_course_slot:
         weight: 45
