--- a/config/sync/field.field.node.vih_long_cource.field_vih_paragraphs.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_vih_paragraphs.yml
@@ -20,6 +20,7 @@ dependencies:
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
     - paragraphs.paragraphs_type.vih_content_grid
+    - paragraphs.paragraphs_type.vih_list_of_news_list_advanced
     - paragraphs.paragraphs_type.vih_teacher_class_description
     - paragraphs.paragraphs_type.vih_webform
   module:
@@ -50,6 +51,7 @@ settings:
       vih_content_grid: vih_content_grid
       social_media_embed: social_media_embed
       long_course_list_: long_course_list_
+      vih_list_of_news_list_advanced: vih_list_of_news_list_advanced
       employee: employee
       gallery: gallery
       short_course_list_: short_course_list_
@@ -108,6 +110,9 @@ settings:
       long_course_list_:
         enabled: true
         weight: 29
+      vih_list_of_news_list_advanced:
+        enabled: true
+        weight: 30
       employee:
         enabled: true
         weight: 30
@@ -134,6 +139,9 @@ settings:
         enabled: false
       vih_single_class_group:
         weight: 44
+        enabled: false
+      vih_banner_slide:
+        weight: 45
         enabled: false
       vih_webform:
         enabled: true
