--- a/config/sync/field.field.user.user.field_vih_user_paragraphs.yml
+++ b/config/sync/field.field.user.user.field_vih_user_paragraphs.yml
@@ -7,6 +7,7 @@ dependencies:
     - paragraphs.paragraphs_type.1_column_action_centered
     - paragraphs.paragraphs_type.article
     - paragraphs.paragraphs_type.class_packages
+    - paragraphs.paragraphs_type.employee
     - paragraphs.paragraphs_type.event_list
     - paragraphs.paragraphs_type.file
     - paragraphs.paragraphs_type.gallery
@@ -18,6 +19,7 @@ dependencies:
     - paragraphs.paragraphs_type.video
     - paragraphs.paragraphs_type.vih_class_groups_accordion
     - paragraphs.paragraphs_type.vih_content_grid
+    - paragraphs.paragraphs_type.vih_list_of_news_list_advanced
     - paragraphs.paragraphs_type.vih_webform
   module:
     - entity_reference_revisions
@@ -44,6 +46,8 @@ settings:
       list_of_news_teasers: list_of_news_teasers
       article: article
       long_course_list_: long_course_list_
+      vih_list_of_news_list_advanced: vih_list_of_news_list_advanced
+      employee: employee
       short_course_list_: short_course_list_
       user_quote: user_quote
       video: video
@@ -74,9 +78,12 @@ settings:
       long_course_list_:
         enabled: true
         weight: 29
+      vih_list_of_news_list_advanced:
+        enabled: true
+        weight: 30
       employee:
+        enabled: true
         weight: 31
-        enabled: false
       short_course_list_:
         enabled: true
         weight: 32
@@ -95,21 +102,21 @@ settings:
       vih_course_slot:
         weight: 36
         enabled: false
-      long_course_list_contain_class:
+      vih_option:
         weight: 37
         enabled: false
-      vih_option:
+      long_course_list_contain_class:
         weight: 37
         enabled: false
       vih_option_group:
         weight: 38
         enabled: false
-      social_media_embed:
-        enabled: true
-        weight: 39
       vih_ordered_course_period:
         weight: 39
         enabled: false
+      social_media_embed:
+        enabled: true
+        weight: 39
       vih_ordered_course_person:
         weight: 40
         enabled: false
@@ -127,6 +134,9 @@ settings:
         enabled: false
       vih_single_class_group:
         weight: 44
+        enabled: false
+      vih_banner_slide:
+        weight: 45
         enabled: false
       vih_teacher_class_description:
         weight: 45
