--- a/config/sync/core.entity_form_display.paragraph.vih_list_of_news_list_advanced.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_list_of_news_list_advanced.default.yml
@@ -76,12 +76,9 @@ content:
     region: content
   field_vih_tags:
     weight: 1
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
 hidden:
   created: true
