--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.node.event.field_metatag
     - field.field.node.event.field_short_description
     - field.field.node.event.field_vih_cource_contact_person
-    - field.field.node.event.field_vih_course_heading
     - field.field.node.event.field_vih_course_subheading
     - field.field.node.event.field_vih_event_end_date
     - field.field.node.event.field_vih_event_persons_limit
@@ -17,6 +16,7 @@ dependencies:
     - field.field.node.event.field_vih_image
     - field.field.node.event.field_vih_paragraphs
     - field.field.node.event.field_vih_top_banner
+    - field.field.node.event.field_vih_top_banner_text
     - field.field.node.event.scheduled_update
     - node.type.event
   module:
@@ -46,14 +46,14 @@ content:
     third_party_settings: {  }
     region: content
   field_metatag:
-    weight: 14
+    weight: 13
     label: above
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
   field_short_description:
-    weight: 15
+    weight: 14
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -68,16 +68,8 @@ content:
     third_party_settings: {  }
     type: entity_reference_entity_view
     region: content
-  field_vih_course_heading:
-    weight: 9
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_vih_course_subheading:
-    weight: 10
+    weight: 9
     label: hidden
     settings:
       link_to_entity: false
@@ -123,7 +115,7 @@ content:
       format_type: medium_datetime
     third_party_settings: {  }
   field_vih_event_status:
-    weight: 11
+    weight: 10
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -148,7 +140,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_vih_top_banner:
-    weight: 13
+    weight: 12
     label: hidden
     settings:
       link: true
@@ -161,7 +153,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   scheduled_update:
-    weight: 12
+    weight: 11
     label: hidden
     settings:
       link: true
@@ -169,4 +161,5 @@ content:
     type: entity_reference_label
     region: content
 hidden:
+  field_vih_top_banner_text: true
   langcode: true
