--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.field.node.news.body
     - field.field.node.news.field_metatag
+    - field.field.node.news.field_vih_course_subheading
     - field.field.node.news.field_vih_image
     - field.field.node.news.field_vih_news_tags
     - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.field_vih_top_banner
+    - field.field.node.news.field_vih_top_banner_text
     - field.field.node.news.scheduled_update
     - node.type.news
   module:
@@ -31,19 +33,27 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 1
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     region: content
   field_metatag:
-    weight: 6
+    weight: 7
     label: above
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
+  field_vih_course_subheading:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_vih_image:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       view_mode: vih_banner_smal
@@ -53,14 +63,14 @@ content:
     region: content
   field_vih_news_tags:
     type: entity_reference_label
-    weight: 3
+    weight: 4
     region: content
     label: hidden
     settings:
       link: true
     third_party_settings: {  }
   field_vih_paragraphs:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       view_mode: default
@@ -69,13 +79,21 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_vih_top_banner:
-    weight: 5
+    weight: 6
     label: hidden
     settings:
       link: true
       view_mode: default
     third_party_settings: {  }
     type: entity_reference_entity_view
+    region: content
+  field_vih_top_banner_text:
+    weight: 8
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   links:
     weight: 0
