--- a/config/sync/core.base_field_override.node.event.title.yml
+++ b/config/sync/core.base_field_override.node.event.title.yml
@@ -8,7 +8,7 @@ id: node.event.title
 field_name: title
 entity_type: node
 bundle: event
-label: 'Tekst på banner'
+label: Overskrift
 description: ''
 required: true
 translatable: true
