--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.node.vih_long_cource.field_metatag
     - field.field.node.vih_long_cource.field_short_description
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
-    - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
     - field.field.node.vih_long_cource.field_vih_course_periods
     - field.field.node.vih_long_cource.field_vih_course_persons_limit
@@ -18,6 +17,7 @@ dependencies:
     - field.field.node.vih_long_cource.field_vih_course_week_price
     - field.field.node.vih_long_cource.field_vih_paragraphs
     - field.field.node.vih_long_cource.field_vih_top_banner
+    - field.field.node.vih_long_cource.field_vih_top_banner_text
     - field.field.node.vih_long_cource.scheduled_update
     - node.type.vih_long_cource
   module:
@@ -262,14 +262,6 @@ content:
     third_party_settings: {  }
     type: entity_reference_entity_view
     region: content
-  field_vih_course_heading:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_vih_course_image:
     weight: 8
     label: hidden
@@ -362,6 +354,14 @@ content:
       view_mode: default
     third_party_settings: {  }
     type: entity_reference_entity_view
+    region: content
+  field_vih_top_banner_text:
+    weight: 17
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   links:
     weight: 0
