--- a/config/sync/field.field.node.news.field_vih_top_banner_text.yml
+++ b/config/sync/field.field.node.news.field_vih_top_banner_text.yml
@@ -1,16 +1,17 @@
-uuid: f2e78e2a-a4db-43c1-9928-a66b7f54ad34
+uuid: 23aeb726-2113-4b02-b68c-5ea252af5688
 langcode: da
 status: true
 dependencies:
   config:
+    - field.storage.node.field_vih_top_banner_text
     - node.type.news
-id: node.news.title
-field_name: title
+id: node.news.field_vih_top_banner_text
+field_name: field_vih_top_banner_text
 entity_type: node
 bundle: news
-label: Overskrift
+label: 'Tekst på banner'
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
