--- a/config/sync/field.field.node.vih_short_course.field_vih_top_banner_text.yml
+++ b/config/sync/field.field.node.vih_short_course.field_vih_top_banner_text.yml
@@ -1,15 +1,15 @@
-uuid: c98c57d0-3068-4558-933f-f09fc72f855d
+uuid: d2be07bd-50ae-4779-bc73-1fc3bf2bd6f1
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.node.field_vih_course_heading
+    - field.storage.node.field_vih_top_banner_text
     - node.type.vih_short_course
-id: node.vih_short_course.field_vih_course_heading
-field_name: field_vih_course_heading
+id: node.vih_short_course.field_vih_top_banner_text
+field_name: field_vih_top_banner_text
 entity_type: node
 bundle: vih_short_course
-label: Overskrift
+label: 'Tekst på banner'
 description: ''
 required: false
 translatable: true
